fixed my code, the backgroung was not showing and I added hyperlink and box shadow to the footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('/assets/images/moon-sunset.jpg');
+  background-color: peachpuff;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -48,10 +48,24 @@ body {
   color: white;
 }
 
+.foot-item {
+  box-shadow: 0 5px 0px rgba(0,0,0,0.19), 0 2px 2px rgba(0,0,0,0.23);
+}
+
 .style:hover {
     color: #e3e1e7;
 
 }
+
+.foot-item {
+  color: black;
+
+}
+.foot-item:hover {
+  color: #7e7a7f;
+  
+}
+
 footer {
   background-color: rgb(55, 65, 64);
   border-top: 0.1em solid #080909;
